fixed some header styling so it isn't covering up top of my page content

--- a/src/components/NewReview/NewReview.module.css
+++ b/src/components/NewReview/NewReview.module.css
@@ -1,7 +1,7 @@
 .new-review {
   background-color: #a892ee;
   padding: 1rem;
-  margin: 7rem auto;
+  margin: 2.5rem auto;
   width: 50rem;
   max-width: 95%;
   border-radius: 12px;
